Changes pirates and other things